change : Change extension from .html to .md

--- a/DailyTarget/Target (2024 06 06).md
+++ b/DailyTarget/Target (2024 06 06).md
@@ -1,5 +1,11 @@
-<!-- https://cssbattle.dev/play/cY2DIn3yLxSML7LIHL0D -->
+# CSS Battle Daily Target - 2024/06/09
 
+[Link to problem] (https://cssbattle.dev/play/cY2DIn3yLxSML7LIHL0D)
+
+![target] (https://firebasestorage.googleapis.com/v0/b/cssbattleapp.appspot.com/o/user%2Fummd3POvEDfFyeFvVdOMG3OOrwE2%2Ftargets%2Ftarget_nDZC2bh.png?alt=media)
+
+
+```
 <div class='c rt'></div>
 <div class='c lt'></div>
 <div class='c rb'></div>
@@ -41,3 +47,4 @@
     background:#243D83;
   }
 </style>
+```
