--- a/DailyTarget/Target (2024 06 07).md
+++ b/DailyTarget/Target (2024 06 07).md
@@ -1,5 +1,10 @@
-<!-- https://cssbattle.dev/play/WkQVfaBd5YZAxAAgmtWt -->
+# CSS Battle Daily Target - 2024/06/07
 
+[Link to the problem] (https://cssbattle.dev/play/WkQVfaBd5YZAxAAgmtWt)
+
+![target] (https://firebasestorage.googleapis.com/v0/b/cssbattleapp.appspot.com/o/user%2Fummd3POvEDfFyeFvVdOMG3OOrwE2%2Ftargets%2Ftarget_089lanc.png?alt=media)
+
+```
 <div class='a'></div>
 <div class='b'></div>
 <div class='c'></div>
@@ -30,3 +35,4 @@
     transform: translate(145px,-305px);
   }
 </style>
+```
