--- a/DailyTarget/Target (2024 06 08).md
+++ b/DailyTarget/Target (2024 06 08).md
@@ -1,3 +1,10 @@
+# CSS Battle Daily Target - 2024/06/08
+
+[Link to the problem] (https://cssbattle.dev/play/h2Y4MCru8l2ziKsCLBik)
+
+![Target] (https://firebasestorage.googleapis.com/v0/b/cssbattleapp.appspot.com/o/user%2Fummd3POvEDfFyeFvVdOMG3OOrwE2%2Ftargets%2Ftarget_9kGSC0s.png?alt=media)
+
+```
 <!-- https://cssbattle.dev/play/h2Y4MCru8l2ziKsCLBik -->
 
 <div class='circle'></div>
@@ -39,3 +46,4 @@
   }
   
 </style>
+```
