--- a/DailyTarget/Target (2024 06 09).md
+++ b/DailyTarget/Target (2024 06 09).md
@@ -1,3 +1,10 @@
+# CSS Battle Daily Target - 2024/06/09
+
+[Link to the problem] (https://cssbattle.dev/play/DJz03cXJhBbItTtsqhGy)
+
+![Target] (https://firebasestorage.googleapis.com/v0/b/cssbattleapp.appspot.com/o/user%2Fummd3POvEDfFyeFvVdOMG3OOrwE2%2Ftargets%2Ftarget_nDZC2bh.png?alt=media)
+
+```
 <!-- https://cssbattle.dev/play/DJz03cXJhBbItTtsqhGy -->
 
 <div class='c t sm cb'></div>
@@ -37,3 +44,4 @@
     width:220px;height: 200px;transform: translate(90px, -10px);
 }
 </style>
+```
