--- a/DailyTarget/Target (2024 06 09).md
+++ b/DailyTarget/Target (2024 06 09).md
@@ -1,8 +1,8 @@
 # CSS Battle Daily Target - 2024/06/09
 
-[Link to the problem] (https://cssbattle.dev/play/DJz03cXJhBbItTtsqhGy)
+[Link to the problem] https://cssbattle.dev/play/DJz03cXJhBbItTtsqhGy)
 
-![Target] (https://firebasestorage.googleapis.com/v0/b/cssbattleapp.appspot.com/o/user%2Fummd3POvEDfFyeFvVdOMG3OOrwE2%2Ftargets%2Ftarget_nDZC2bh.png?alt=media)
+![Target](https://firebasestorage.googleapis.com/v0/b/cssbattleapp.appspot.com/o/user%2Fummd3POvEDfFyeFvVdOMG3OOrwE2%2Ftargets%2Ftarget_nDZC2bh.png?alt=media)
 
 ```
 <!-- https://cssbattle.dev/play/DJz03cXJhBbItTtsqhGy -->
