Add : Solution DailyTarget 2024_06_10

--- a/DailyTarget/Target (2024 06 09).md
+++ b/DailyTarget/Target (2024 06 09).md
@@ -4,6 +4,8 @@
 
 ![Target](https://firebasestorage.googleapis.com/v0/b/cssbattleapp.appspot.com/o/user%2Fummd3POvEDfFyeFvVdOMG3OOrwE2%2Ftargets%2Ftarget_nDZC2bh.png?alt=media)
 
+# Resolve time : 13 Minute
+
 ```
 <!-- https://cssbattle.dev/play/DJz03cXJhBbItTtsqhGy -->
 
